--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+TINY_KEY=kZd0ymrnlt4BMQ9TM5ZC6Y6yT0dd2cs2
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
