--- a/dev/nginx.conf
+++ b/dev/nginx.conf
@@ -1,6 +1,6 @@
 server {
-
-    server_name api.localtest.me;
+    listen 80;
+    server_name api.prod.me;
     client_max_body_size 100M;
 
     root /project/public;
