--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -28,6 +28,8 @@ services:
       DB_DATABASE: api_assignment_db
       DB_USERNAME: root
       DB_PASSWORD: password
+    depends_on:
+      - db
   mysql:
     image: mysql/mysql-server:8.0.24
     ports:
