--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -29,7 +29,7 @@ services:
       DB_USERNAME: root
       DB_PASSWORD: password
     depends_on:
-      - db
+      - mysql
   mysql:
     image: mysql/mysql-server:8.0.24
     ports:
