--- a/dev/nginx.conf
+++ b/dev/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name api.prod.me;
+    server_name 165.22.76.22;
     client_max_body_size 100M;
 
     root /project/public;
